--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,12 +1,62 @@
 <div class="header">
   <ul class="nav nav-pills pull-right">
-    <li class="active"><a ng-href="#">Home</a></li>
-    <li><a ng-href="#">About</a></li>
-    <li><a ng-href="#">Contact</a></li>
   </ul>
   <h3 class="text-muted">genius</h3>
 </div>
 
+<div class="hero-unit">
+  <h1>db</h1>
+  <p>
+    hoodie playground.
+  </p>
+
+  <div class="hoodie-accountbar">
+
+    <div class="hoodie-account-signedout">
+      <span class="btn-group">
+        <button class="btn btn-small btn-inverse" data-hoodie-action="signup">Sign Up</button>
+        <button class="btn btn-small dropdown-toggle btn-inverse" data-toggle="dropdown">
+          <span class="caret"></span>
+        </button>
+        <ul class="dropdown-menu pull-right">
+          <li><a href="#" data-hoodie-action="signin">Sign In</a></li>
+          <li><a href="#" data-hoodie-action="resetpassword">Reset Password</a></li>
+          <li><a href="#" data-hoodie-action="destroy">Clear local data</a></li>
+        </ul>
+      </span>
+    </div><!-- /.hoodie-account-signedout -->
+
+    <div class="hoodie-account-signedin">
+      Hello,
+      <span class="hoodie-username"><!-- usern name will be filled in here --></span>
+      <span class="btn-group">
+        <button class="btn btn-small btn-inverse" data-hoodie-action="signout">Sign Out</button>
+        <button class="btn btn-small dropdown-toggle btn-inverse" data-toggle="dropdown">
+          <span class="caret"></span>
+        </button>
+        <ul class="dropdown-menu pull-right">
+          <li><a href="#" data-hoodie-action="changepassword">Change Password</a></li>
+          <li><a href="#" data-hoodie-action="changeusername">Change Username</a></li>
+          <li><a href="#" data-hoodie-action="destroy">Destroy Account</a></li>
+        </ul>
+      </span>
+    </div><!-- /.hoodie-account-signedin -->
+
+    <div class="hoodie-account-error">
+      Hello,
+      <span class="hoodie-username"><!-- username will be filled in here --></span>.
+      <span class="btn-group">
+        <button class="btn btn-small btn-danger" data-hoodie-action="signin">Authentication error: Sign in again</button>
+        <button class="btn btn-small dropdown-toggle btn-danger" data-toggle="dropdown">
+          <span class="caret"></span>
+        </button>
+        <ul class="dropdown-menu pull-right">
+          <li><a href="#" data-hoodie-action="signout">Sign out</a></li>
+        </ul>
+      </span>
+    </div><!-- /.hoodie-account-error -->
+  </div><!--/hoodieAccountBar -->
+</div>
 
 <ul id="todo-list">
   <li ng-repeat="todo in todos">
