--- a/app/views/main.html
+++ b/app/views/main.html
@@ -58,13 +58,30 @@
   </div><!--/hoodieAccountBar -->
 </div>
 
-<ul id="todo-list">
-  <li ng-repeat="todo in todos">
-    {{todo.title}}
-  </li>
-</ul>
-
-<a href="#" data-hoodie-action="signin">Sign In</a>
+<section id="todoapp" ng-controller="MainCtrl">
+  <header id="header">
+    <h1>todos</h1>
+    <form id="todo-form" ng-submit="addTodo()">
+      <input id="new-todo" placeholder="What needs to be done?" ng-model="newTodo" autofocus>
+    </form>
+  </header>
+  <section id="main" ng-show="todos.length" ng-cloak>
+    <input id="toggle-all" type="checkbox" ng-model="allChecked" ng-click="markAll(allChecked)">
+    <label for="toggle-all">Mark all as complete</label>
+    <ul id="todo-list">
+      <li ng-repeat="todo in todos" ng-class="{completed: todo.completed, editing: todo == editedTodo}">
+        <div class="view">
+          <input class="toggle" type="checkbox" ng-model="todo.completed">
+          <label ng-dblclick="editTodo(todo)">{{todo.title}}</label>
+          <button class="destroy" ng-click="removeTodo(todo)"></button>
+        </div>
+        <form ng-submit="doneEditing(todo)">
+          <input class="edit" ng-model="todo.title" todo-blur="doneEditing(todo)" todo-focus="todo == editedTodo">
+        </form>
+      </li>
+    </ul>
+  </section>
+</section>
 
 <div class="footer">
   <p><span class="glyphicon glyphicon-heart"></span> from the Yeoman team</p>
