--- a/app/views/main.html
+++ b/app/views/main.html
@@ -75,12 +75,14 @@
               </h3>
               <div class="brick-container">
                 <div class="bricks">
-                  <div class="brick ui-widget-content gate-and">AND</div>
+                  <!-- <div class="brick ui-widget-content gate-and">AND</div> -->
+                  <div class="brick gate-and" is-draggable="{helper: 'clone'}">AND</div>
                 </div>
               </div>
               <div class="brick-container">
                 <div class="bricks">
-                  <div class="brick ui-widget-content gate-not">NOT</div>
+                  <!-- <div class="brick ui-widget-content gate-not">NOT</div> -->
+                  <div class="brick gate-not" is-draggable="{helper: 'clone'}">NOT</div>
                 </div>
               </div>
             </div>
