Add directives for droppable and jsplumb to main.js

--- a/app/views/main.html
+++ b/app/views/main.html
@@ -39,7 +39,7 @@
       </div>
     </div>
     <div class="row">
-      <div class="col-xs-12 ui-widget-content" id="workspace">
+      <div class="col-xs-12 ui-widget-content" id="workspace" is-droppable js-plumb>
         <div id="data"></div>
 
         <div class="btn-toolbar">
