--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -1,190 +1,181 @@
 $icon-font-path: "/bower_components/bootstrap-sass-official/vendor/assets/fonts/bootstrap/";
 
-@import 'bootstrap-sass-official/vendor/assets/stylesheets/bootstrap';
+//@import 'bootstrap-sass-official/vendor/assets/stylesheets/bootstrap';
 
 // bower:scss
 @import "../bower_components/bootstrap-sass-official/vendor/assets/stylesheets/bootstrap.scss";
 // endbower
 
-@import 'social-buttons.scss';
+//@import 'social-buttons.scss';
 
 .browsehappy {
-    margin: 0.2em 0;
-    background: #ccc;
-    color: #000;
-    padding: 0.2em 0;
+  margin: 0.2em 0;
+  background: #ccc;
+  color: #000;
+  padding: 0.2em 0;
 }
 $bg: #f8f8f8;
 $shadow: gray;
 
-#_hc_bar {
-    display: none !important;   
-}
-
 body {
-    .brick-container {
-        float: left;
-        padding: 0 10px 10px 10px;
-    }
-    .brick {
-        height: 60px;
-        width: 60px;
-        border: 1px solid #999;
-        background: #bbb;
-        border-radius: 5px;
-        cursor: pointer;
-        line-height: 60px;
-        text-align: center;
-        color: white;
-        text-transform: uppercase;
-        font-size: 14px;
-    }
-    .gate-and {
-        
-    }
-    .gate-not {
+  overflow: hidden;
+  .brick-container {
+    float: left;
+    padding: 0 10px 10px 10px;
+  }
+  .brick {
+    height: 60px;
+    width: 60px;
+    border: 1px solid #999;
+    background: #bbb;
+    border-radius: 5px;
+    cursor: pointer;
+    line-height: 60px;
+    text-align: center;
+    color: white;
+    text-transform: uppercase;
+    font-size: 14px;
+  }
+  .gate-and {
 
-    }
+  }
+  .gate-not {
 
-    #loginModal {
-        position: absolute;
-        top: 0;
-        bottom: 0;
-        left: 0;
-        right: 0;
-        overflow: hidden;
-        .modal-dialog {
-            margin-top: 300px;
-            width: 400px;
-            button .fa-tudelft {
-                background-image: url('../images/tudelft.png');
-                width: 16px;
-                height: 16px;
-            }
-            .modal-footer {
-                a,.splitter {
-                    float: left;
-                }
-                .splitter {
-                    padding: 0 10px;
-                }
-            }
+  }
+
+  #loginModal {
+    .modal-dialog {
+      width: 400px;
+      .modal-footer {
+        a,.splitter {
+          float: left;
         }
+        .splitter {
+          padding: 0 10px;
+        }
+      }
     }
-    overflow: hidden;
-    #main {
+  }
+
+  #main {
+    position: absolute;
+    left: 15px;
+    right: 15px;
+    top: 0;
+    bottom: 0;
+    #mainLeft {
+      overflow: hidden;
+      height: 100%;
+      .navbar {
+        position: absolute;
+        border-bottom: none;
+        box-shadow: 0px 0px 3px $shadow;
+        .navbar-right > ul > li > a > i {
+          font-size: 1.4em;
+        }
+      }
+      .row {
         position: absolute;
         left: 15px;
         right: 15px;
-        top: 0;
         bottom: 0;
-        #mainLeft {
-            overflow: hidden;
-            height: 100%;
-            .navbar {
-                position: absolute;
-                border-bottom: none;
-                box-shadow: 0px 0px 3px $shadow;
-                .navbar-right > ul > li > a > i {
-                    font-size: 1.4em;
-                }
-            }
-            .row {
-                position: absolute;
-                left: 15px;
-                right: 15px;
-                bottom: 0;
-                top: 50px;
-                #workspace {
-                    height: 100%;
-                    background: url('../images/grid.png') repeat;
-                    .btn-toolbar {
-                        position: absolute;
-                        bottom: 15px;
-                        right: 20px;
-                    }
-                }
-            }
+        top: 50px;
+        #workspace {
+          height: 100%;
+          background: url('../images/grid.png') repeat;
+          border: none;
+          .btn-toolbar {
+            position: absolute;
+            bottom: 15px;
+            right: 20px;
+          }
         }
-        #mainRight {
-            background-color: $bg;
-            box-shadow: 0px 0px 3px $shadow;
-            height: 100%;
-            .nav-tabs {
-                border-bottom: none;
-                margin-top: 9px;
-                position: relative;
-                z-index: 1;
-            }
-            .tab-content {
-                position: absolute;
-                left: 15px;
-                right: 15px;
-                bottom: 15px;
-                top: 50px;
-                .tab-pane {
-                    height: 100%;
-                }
-                #library {
-                    .panel {
-                        position: absolute;
-                        top: 0;
-                        bottom: 27px;
-                        right: 0;
-                        left: 0;
-                        -webkit-border-top-left-radius: 0;
-                        -moz-border-radius-topleft: 0;
-                        border-top-left-radius: 0;
-                        .panel-body {
-                            height: 100%;
-                            h3 {
-                                border-bottom: 1px solid #999;
-                                width: 100%;
-                                text-align: center;
-                                font-size: 0.7em;
-                                height: 0.6em;
-                                margin-bottom: 1em;
-                                clear: both;
-                                i {
-                                    float: left;
-                                    background-color: white;
-                                    padding: 1px 5px 1px 0;
-                                    color: #777;
-                                    cursor: pointer;
-                                }
-                                a {
-                                    padding: 0 5px;
-                                    color: #777;
-                                    background-color: white;
-                                    text-transform: uppercase;
-                                }
-                            }
-                            .gates-container {
-                                .bricks {
-
-                                }
-                            }
-                        }
-                    }
-                    .filters {
-                        position: absolute;
-                        left: 0;
-                        right: 0;
-                        bottom: -15px;
-                        .btn {
-                            padding: 9px 12px;
-                        }
-                    }
-                }
-                #visualisation {
-                    .panel {
-                        height: 100%;
-                        .panel-body {
-                            height: 100%;
-                        }
-                    }
-                }
-            }
-        }
+      }
     }
+    #mainRight {
+      background-color: $bg;
+      box-shadow: 0px 0px 3px $shadow;
+      height: 100%;
+      .nav-tabs {
+        border-bottom: none;
+        margin-top: 9px;
+        position: relative;
+        z-index: 1;
+        a {
+          cursor: pointer;
+        }
+      }
+      .tab-content {
+        position: absolute;
+        left: 15px;
+        right: 15px;
+        bottom: 15px;
+        top: 50px;
+        .tab-pane {
+          height: 100%;
+        }
+        #library {
+          height: 100%;
+          .panel {
+            position: absolute;
+            top: 0;
+            bottom: 27px;
+            right: 0;
+            left: 0;
+            -webkit-border-top-left-radius: 0;
+            -moz-border-radius-topleft: 0;
+            border-top-left-radius: 0;
+            .panel-body {
+              height: 100%;
+              h3 {
+                border-bottom: 1px solid #999;
+                width: 100%;
+                text-align: center;
+                font-size: 0.7em;
+                height: 0.6em;
+                margin-bottom: 1em;
+                clear: both;
+                i {
+                  float: left;
+                  background-color: white;
+                  padding: 1px 5px 1px 0;
+                  color: #777;
+                  cursor: pointer;
+                }
+                a {
+                  padding: 0 5px;
+                  color: #777;
+                  background-color: white;
+                  text-transform: uppercase;
+                }
+              }
+              .gates-container {
+                .bricks {
+
+                }
+              }
+            }
+          }
+          .filters {
+            position: absolute;
+            left: 0;
+            right: 0;
+            bottom: 0;
+            .input-group-btn {
+              width: 1%;
+            }
+          }
+        }
+        #visualisation {
+          height: 100%;
+          .panel {
+            height: 100%;
+            .panel-body {
+              height: 100%;
+            }
+          }
+        }
+      }
+    }
+  }
 }
