Implement sign in/sign up and refactor some code

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -21,6 +21,25 @@ $shadow: gray;
     display: none !important;   
 }
 
+/* hide contents until we know if user is signed in or not */
+body .hoodie-account-signedin,
+body .hoodie-account-signedout,
+body .hoodie-account-error {
+  display: none;
+}
+
+html[data-hoodie-account-status=signedin]  .hoodie-account-signedin,
+html[data-hoodie-account-status=error]     .hoodie-account-error,
+html[data-hoodie-account-status=signedout] .hoodie-account-signedout {
+  display: block;
+}
+
+.hoodie-accountbar {
+  position: absolute;
+  top: 10px;
+  right: 160px;
+}
+
 body {
     .brick-container {
         float: left;
