--- a/app/views/main.html
+++ b/app/views/main.html
@@ -21,6 +21,16 @@
                 <i class="fa fa-copy"></i>
               </a>
             </li>
+            <li>
+              <a href="#" tooltip="Run" tooltip-placement="bottom">
+                <i class="fa fa-play"></i>
+              </a>
+            </li>
+            <li>
+              <a href="#" tooltip="Export" tooltip-placement="bottom">
+                <i class="fa fa-download"></i>
+              </a>
+            </li>
             <li class="dropdown hoodie-accountbar" on-toggle="toggled(open)">
               <a href="#" class="dropdown-toggle">
                 <i class="fa fa-user"></i>
@@ -68,20 +78,7 @@
       </div>
     </div>
     <div class="row">
-      <div class="col-xs-12 ui-widget-content" id="workspace" is-droppable circuit-Settings>
-        <div id="data"></div>
-
-        <div class="btn-toolbar">
-          <div class="btn-group">
-            <a href="#" class="btn btn-lg btn-primary" tooltip="Run" tooltip-append-to-body="true">
-              <i class="fa fa-play"></i>
-            </a>
-            <a href="#" class="btn btn-lg btn-default" tooltip="Export" tooltip-append-to-body="true">
-              <i class="fa fa-download"></i>
-            </a>
-          </div>
-        </div>
-      </div>
+      <div class="col-xs-12 ui-widget-content" id="workspace" is-droppable circuit-Settings></div>
     </div>
   </div>
   <tabset class="hidden-xs col-sm-4 col-md-3" id="mainRight">
