--- a/app/views/main.html
+++ b/app/views/main.html
@@ -106,6 +106,11 @@
                   <div class="brick gate-or" is-draggable="{helper: 'clone'}">OR</div>
                 </div>
               </div>
+              <div class="brick-container">
+                <div class="bricks">
+                  <div class="brick gate-input" is-draggable="{helper: 'clone'}">INPUT</div>
+                </div>
+              </div>
             </div>
             <h3>
               <i class="fa fa-caret-right"></i>
