Change circuit settings and brick order

--- a/app/views/main.html
+++ b/app/views/main.html
@@ -93,22 +93,22 @@
               </h3>
               <div class="brick-container">
                 <div class="bricks">
-                  <div class="brick gate-and" is-draggable="{helper: 'clone'}">AND</div>
+                  <div class="brick gate-and" tooltip="AND" is-draggable="{helper: 'clone'}">AND</div>
                 </div>
               </div>
               <div class="brick-container">
                 <div class="bricks">
-                  <div class="brick gate-not" is-draggable="{helper: 'clone'}">NOT</div>
+                  <div class="brick gate-or" tooltip="OR" is-draggable="{helper: 'clone'}">OR</div>
                 </div>
               </div>
               <div class="brick-container">
                 <div class="bricks">
-                  <div class="brick gate-or" is-draggable="{helper: 'clone'}">OR</div>
+                  <div class="brick gate-not" tooltip="NOT" is-draggable="{helper: 'clone'}">NOT</div>
                 </div>
-              </div>
+              </div> 
               <div class="brick-container">
                 <div class="bricks">
-                  <div class="brick gate-input" is-draggable="{helper: 'clone'}">INPUT</div>
+                  <div class="brick gate-input" tooltip="INPUT" is-draggable="{helper: 'clone'}">INPUT</div>
                 </div>
               </div>
             </div>
