--- a/app/views/main.html
+++ b/app/views/main.html
@@ -111,6 +111,11 @@
                   <div class="brick gate-input" tooltip="INPUT" is-draggable="{helper: 'clone'}">INPUT</div>
                 </div>
               </div>
+              <div class="brick-container">
+                <div class="bricks">
+                  <div class="brick gate-output" tooltip="OUTPUT" is-draggable="{helper: 'clone'}">OUTPUT</div>
+                </div>
+              </div>
             </div>
             <h3>
               <i class="fa fa-caret-right"></i>
