--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -49,6 +49,21 @@ body {
     text-transform: uppercase;
     font-size: 14px;
     background-repeat: no-repeat;
+    i.delete-brick {
+      display: none;
+      z-index: 1000;
+      display: none;
+      color: #999;
+      font-size: 20px;
+      position: absolute;
+      top: -10px;
+      right: -10px;
+      cursor: pointer;
+    }
+    &:hover i.delete-brick {
+      display: block
+
+    }
   }
   .gate-and {
     background-image: url('../images/gates/AND.svg');
