--- a/app/views/main.html
+++ b/app/views/main.html
@@ -16,44 +16,7 @@
     <tab heading="Library">
       <div id="library">
         <div class="panel panel-default">
-          <div class="panel-body">
-            <div class="gates-container">
-              <h3>
-                <a href="#">Gates</a>
-              </h3>
-              <div class="brick-container">
-                <div class="bricks">
-                  <div class="brick gate-and" tooltip="AND" is-draggable="{helper: 'clone'}">AND</div>
-                </div>
-              </div>
-              <div class="brick-container">
-                <div class="bricks">
-                  <div class="brick gate-or" tooltip="OR" is-draggable="{helper: 'clone'}">OR</div>
-                </div>
-              </div>
-              <div class="brick-container">
-                <div class="bricks">
-                  <div class="brick gate-not" tooltip="NOT" is-draggable="{helper: 'clone'}">NOT</div>
-                </div>
-              </div>
-              <div class="brick-container">
-                <div class="bricks">
-                  <div class="brick gate-input" tooltip="INPUT" is-draggable="{helper: 'clone'}">INPUT</div>
-                </div>
-              </div>
-              <div class="brick-container">
-                <div class="bricks">
-                  <div class="brick gate-output" tooltip="OUTPUT" is-draggable="{helper: 'clone'}">OUTPUT</div>
-                </div>
-              </div>
-            </div>
-            <h3>
-              <a href="#">Private</a>
-            </h3>
-            <h3>
-              <a href="#">Public</a>
-            </h3>
-          </div>
+          <div class="panel-body" ng-include="'views/bricks/library.html'" ng-controller="BricksCtrl"></div>
         </div>
         <form class="form-inline filters">
           <div class="form-group">
