Style editable title + fix proxy port

--- a/app/views/bricks/title.html
+++ b/app/views/bricks/title.html
@@ -1,3 +1,6 @@
-<div>
-  Unnamed biobrick project <em class="text-muted hidden-xs">- saved</em>
-</div>
+<span contenteditable="true" class="title">Unnamed biobrick project</span>
+<em class="text-muted hidden-xs state">-
+  <span class="saved">saved</span>
+  <span class="saving hidden">saving...</span>
+  <span class="error hidden">not saved</span>
+</em>
