--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -100,6 +100,25 @@ body {
         position: absolute;
         border-bottom: none;
         box-shadow: 0px 0px 3px $shadow;
+        .navbar-text {
+          .title {
+            background-color: transparent;
+            border: none;
+            padding: 4px 8px;
+            margin: -4px;
+            border-radius: 2px;
+            -webkit-border-radius: 2px;
+            -moz-border-radius: 2px;
+            outline: none;
+            &:hover, &:focus {
+              border: 1px solid #ddd;
+              margin: -5px;
+            }
+            &:focus {
+              background-color: white;
+            }
+          }
+        }
         .navbar-right > ul > li > a > i {
           font-size: 1.4em;
         }
