--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -32,6 +32,14 @@ html[data-hoodie-account-status=signedout] .hoodie-account-signedout {
 
 body {
   overflow: hidden;
+  .component {
+    border: 1px solid #346789;
+    border-radius: 0.5em;
+    opacity: 0.8;
+    background-color: white;
+    color: black;
+    padding: 0.5em;
+  }
   .brick-container {
     float: left;
     padding: 0 15px 10px 15px;
@@ -39,8 +47,6 @@ body {
   .brick {
     height: 64px;
     width: 65px;
-    // border: 1px solid #999;
-    // background: #bbb;
     border-radius: 5px;
     cursor: pointer;
     line-height: 60px;
