--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -52,7 +52,6 @@ body {
     i.delete-brick {
       display: none;
       z-index: 1000;
-      display: none;
       color: #999;
       font-size: 20px;
       position: absolute;
@@ -60,9 +59,23 @@ body {
       right: -10px;
       cursor: pointer;
     }
-    &:hover i.delete-brick {
-      display: block
-
+    i.brick-popover {
+      display: none;
+      z-index: 1000;
+      color: black;
+      font-size: 20px;
+      position: absolute;
+      top: -10px;
+      right: 50px;
+      cursor: pointer;
+    }
+    &:hover {
+       i.delete-brick { 
+        display: block;
+      }
+       i.brick-popover {
+        display: block;
+       }
     }
   }
   .brick-and {
