--- a/app/views/users/nav.html
+++ b/app/views/users/nav.html
@@ -1,12 +1,12 @@
 <ul class="nav navbar-nav">
   <li class="dropdown" on-toggle="toggled(open)">
-    <a href="#" class="dropdown-toggle">
+    <a href="#" class="dropdown-toggle" id="nav-dropdown">
       <i class="fa fa-user"></i>
     </a>
 
     <ul class="dropdown-menu pull-right">
       <li class="hoodie-account-signedout">
-        <a href="#" data-hoodie-action="signup">Sign up</a>
+        <a href="#" data-hoodie-action="signup" id="signup">Sign up</a>
       </li>
       <li class="hoodie-account-signedout">
         <a href="#" data-hoodie-action="signin">Sign in</a>
