Make tests for changing project name

--- a/app/views/bricks/title.html
+++ b/app/views/bricks/title.html
@@ -1,4 +1,4 @@
-<span contenteditable="true" class="title">Unnamed biobrick project</span>
+<span contenteditable="true" id="title">Unnamed biobrick project</span>
 <em class="text-muted hidden-xs state">-
   <span class="saved">saved</span>
   <span class="saving hidden">saving...</span>
