--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -76,7 +76,7 @@ body {
       cursor: pointer;
     }
     &:hover {
-       i.delete-brick { 
+       i.delete-brick {
         display: block;
       }
        i.brick-popover {
@@ -120,7 +120,7 @@ body {
         border-bottom: none;
         box-shadow: 0px 0px 3px $shadow;
         .navbar-text {
-          .title {
+          #title {
             background-color: transparent;
             border: none;
             padding: 4px 8px;
